--- a/package.json
+++ b/package.json
@@ -24,5 +24,26 @@
     "bugs": {
         "url": "https://github.com/cheap-shoppers/api-wrapper-migrate/issues"
     },
-    "homepage": "https://github.com/cheap-shoppers/api-wrapper-migrate#readme"
+    "homepage": "https://github.com/cheap-shoppers/api-wrapper-migrate#readme",
+    "dependencies": {
+        "axios": "^1.2.3",
+        "date-fns": "^2.29.3"
+    },
+    "devDependencies": {
+        "@rollup/plugin-typescript": "^11.0.0",
+        "@types/jest": "^29.2.6",
+        "@types/node": "^18.11.18",
+        "@types/node-fetch": "^2.6.2",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "dotenv": "^16.0.3",
+        "eslint": "^8.32.0",
+        "jest": "^29.4.0",
+        "prettier": "^2.8.3",
+        "rollup": "^3.10.1",
+        "ts-jest": "^29.0.5",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.4"
+    }
 }
